test/simple/ill-typed/ho_fun_right.caprice
(* TEST
  include refute;
*)


let f (g : int -> int) : int -> bool =
  g
